--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ matrix:
       compiler: clang
 
 install:
-  - brew install dreal-deps/coinor/clp
+  - rm /usr/local/include/c++ # https://github.com/Homebrew/brew/issues/1742#issuecomment-277308817
+  - brew install dreal-deps/coinor/clp --build-from-source
 
 notifications:
   email:
