--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: cpp
 matrix:
   include:
     - os: osx
-      osx_image: xcode8.3
+      osx_image: xcode9.2
       compiler: clang
     - os: osx
-      osx_image: xcode9
+      osx_image: xcode9.3beta
       compiler: clang
 
 script:
