--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: cpp
 matrix:
   include:
     - os: osx
+      osx_image: xcode8
+      compiler: clang  
+    - os: osx
       osx_image: xcode9.2
       compiler: clang
     - os: osx
