Minor fixes + add 'brew audit' in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
       compiler: clang
 
 script:
+  - brew audit --strict --online *.rb  # --new-formula is not ready because of coinutils.
   - rm /usr/local/include/c++ # https://github.com/Homebrew/brew/issues/1742#issuecomment-277308817
   - brew update
   - brew install dreal-deps/coinor/clp --build-from-source
