--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,17 @@ language: cpp
 matrix:
   include:
     - os: osx
-      osx_image: xcode8
-      compiler: clang  
-    - os: osx
       osx_image: xcode9.2
       compiler: clang
     - os: osx
       osx_image: xcode9.4
       compiler: clang
+    - os: osx
+      osx_image: xcode10
+      compiler: clang
 
 script:
-  - rm /usr/local/include/c++ # https://github.com/Homebrew/brew/issues/1742#issuecomment-277308817
+  - rm -rf /usr/local/include/c++ # https://github.com/Homebrew/brew/issues/1742#issuecomment-277308817
   - brew update
   - brew install dreal-deps/coinor/clp --build-from-source
 
