--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
 
 script:
   - rm -rf /usr/local/include/c++ # https://github.com/Homebrew/brew/issues/1742#issuecomment-277308817
+  - brew tap dreal-deps/coinor
   - brew update
   - brew install dreal-deps/coinor/clp --build-from-source
 
